--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,7 +43,14 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
-    //retrofit and Gson [Link:]https://square.github.io/retrofit/
+    //retrofit and Gson [Link:] https://square.github.io/retrofit/
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+
+    //picasso [Link:] https://github.com/square/picasso
+    implementation 'com.squareup.picasso:picasso:2.71828'
+
+    //Glide [Link:] https://github.com/bumptech/glide
+    implementation 'com.github.bumptech.glide:glide:4.13.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.13.0'
 }
