--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,10 +47,10 @@ dependencies {
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
 
-    //picasso [Link:] https://github.com/square/picasso
-    implementation 'com.squareup.picasso:picasso:2.71828'
-
     //Glide [Link:] https://github.com/bumptech/glide
     implementation 'com.github.bumptech.glide:glide:4.13.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.13.0'
+
+    //CircleImageView [Link:] https://github.com/hdodenhof/CircleImageView
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
 }
