--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,8 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    id 'kotlin-android-extensions'
+    id 'kotlin-kapt'    //BR.viewModel
 }
 
 android {
@@ -60,7 +62,6 @@ dependencies {
     implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
     implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
 
-    //logging-interceptor
-    implementation 'com.squareup.okhttp3:logging-interceptor:3.8.0'
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
 
 }
