--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,7 @@
         android:theme="@style/Theme.Kotlin_Retrofit_Github">
         <activity
             android:name=".Activity.ReposActivity"
+            android:label=""
             android:exported="false" />
         <activity
             android:name=".MainActivity"
