--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,7 +32,9 @@ android {
         jvmTarget = '1.8'
     }
 
-    dataBinding.enabled = true
+    buildFeatures {
+        dataBinding true
+    }
 }
 
 dependencies {
